--- a/1_Jornal_Online/jornal_online.html
+++ b/1_Jornal_Online/jornal_online.html
@@ -7,7 +7,15 @@
     <title>Jornal Online</title>
 </head>
 <body>
-    <h1>Online Newspaper</h1>
-    <h3>The best online newspaper in the world</h3>
+    <header>
+        <h1>Online Newspaper</h1>
+        <h2>The best online newspaper in the world</h2>
+        <img scr = "file:///C:/Users/Asus/Desktop/TSIW/TAW/Fichas_De_Trabalho/1_Jornal_Online/images/jornal-nacional-logo-518D23198E-seeklogo.com.png">
+    </header>
+    
+
+    <section>
+
+    </section>
 </body>
 </html>
