--- a/4_Estilizar_Jornal_Online/index.html
+++ b/4_Estilizar_Jornal_Online/index.html
@@ -11,7 +11,7 @@
     <link href="forms.css" rel="stylesheet">
   </head>
   <body>
-    <header>
+    <header class="primeira">
       <h1><a href="index.html">Super Legit News</a></h1>
       <h2><a href="index.html">Where fake news are born!</a></h2>
       <div id="signup">
