--- a/5_JS_b.html
+++ b/5_JS_b.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Exercicio 5 a)</title>
+    <title>Document</title>
 </head>
 <body>
     <script>
-        var resposta = prompt("What’s the “official name of Javascript?");
-        
-        if (resposta = "ECMAScript"){
-            alert("Right!")
+        var num = prompt("Escreva um número: ");
+        if (num > 0){
+            alert(1)
         }
-        else{
-            alert("You don’t know? ECMAScript!")
+        else if (num < 0){
+            alert(-1)
+        }
+        else {
+            alert(0)
         }
     </script>
 </body>
