--- a/5_JS_a.html
+++ b/5_JS_a.html
@@ -9,13 +9,16 @@
 <body>
     <script>
         var resposta = prompt("What’s the “official name of Javascript?");
-        
-        if (resposta = "ECMAScript"){
+        if (resposta == "ECMAScript"){
             alert("Right!")
         }
         else{
             alert("You don’t know? ECMAScript!")
         }
+
+        /*Usando a construção if..else, escreva o código que pergunta: "What’s the “official”
+        name of Javascript?”. Se o visitante digitar “ECMAScript”, envie “Right!”, Caso
+        contrário, a saída: “You don’t know? “ECMAScript”!”*/
     </script>
 </body>
 </html>
