--- a/5_JS_b.html
+++ b/5_JS_b.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Exercicio 5 b)</title>
 </head>
 <body>
     <script>
@@ -18,6 +18,12 @@
         else {
             alert(0)
         }
+
+        /*Usando if..else, escreva o código que obtém um número via prompt e, em seguida, mostra em alerta:
+            i. 1, se o valor for maior que zero,
+            ii. -1, se menor que zero,
+            iii. 0, se igual a zero.
+        Nesta tarefa, assumimos que a entrada é sempre um número.*/
     </script>
 </body>
 </html>
